# Xenocrypt2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  blobdetection  click_colour  colour_detect  conquest  crypt  pseudo  triangledetect  videocolour
src/: blobdetection.cpp  blobdetection.cpp~  click_colour.cpp  colour_detect.cpp  colour_detect.cpp~  conquest.cpp  crypt.cpp  crypt.cpp~  learn.cpp~  pseudo.cpp  pseudo.cpp~  triangledetect.cpp
